Add GPG key and repo. Fixes #1

--- a/arvados.yaml
+++ b/arvados.yaml
@@ -1,8 +1,7 @@
 # Main playbook to deploy an Arvados cluster
 
 - hosts: all
-  sudo_user: "{{ user }}"
-  sudo: yes
+  sudo_user: "root"
 
   roles:
       - arvados
