--- a/roles/arvados-sso/tasks/main.yaml
+++ b/roles/arvados-sso/tasks/main.yaml
@@ -2,11 +2,17 @@
 # Tasks file for the Arvados SSO role #
 #######################################
 
+- name: Link Ruby 2.1.3 to be used system-wide
+  sudo: yes
+  command: ln -s -f "{{ RUBY_PATH }}"/* /usr/bin
+
 - name: Install rails (this may take a couple of minutes, pease be patient)
-  become: yes
-  become_user: root
-  become_method: sudo
+  sudo: yes
   gem: name=rails state=latest
+
+- name: Link rails to be used system-wide
+  sudo: yes
+  command: ln -s -f "{{ RUBY_PATH }}"/rails /usr/bin/rails
 
 - name: Install Arvados SSO server
   sudo: yes
@@ -74,3 +80,9 @@
   sudo: yes
   shell: >
     yum reinstall arvados-sso-server -y
+
+- name: Copy new-client script to /tmp
+  template: src=new_client.j2 dest=/tmp/new_client.rb
+
+- name: Create arvados-server client
+  command: rails runner -e production /tmp/new_client.rb
