--- a/roles/arvados-sso/tasks/main.yaml
+++ b/roles/arvados-sso/tasks/main.yaml
@@ -4,7 +4,8 @@
 
 - name: Link Ruby 2.1.3 to be used system-wide
   sudo: yes
-  command: ln -s -f "{{ RUBY_PATH }}"/* /usr/bin
+  shell: >
+    ln -s -f /usr/local/rvm/rubies/ruby-2.1.3/bin/* /usr/bin
 
 - name: Install rails (this may take a couple of minutes, pease be patient)
   sudo: yes
@@ -12,7 +13,8 @@
 
 - name: Link rails to be used system-wide
   sudo: yes
-  command: ln -s -f "{{ RUBY_PATH }}"/rails /usr/bin/rails
+  shell: >
+    ln -s -f /usr/local/rvm/gems/ruby-2.1.3/bin/rails /usr/bin/rails
 
 - name: Install Arvados SSO server
   sudo: yes
@@ -85,4 +87,7 @@
   template: src=new_client.j2 dest=/tmp/new_client.rb
 
 - name: Create arvados-server client
-  command: rails runner -e production /tmp/new_client.rb
+  sudo: yes
+  shell: >
+    cd /var/www/arvados-sso/current/ &&
+    rails runner -e production /tmp/new_client.rb
