--- a/roles/arvados-sso/tasks/main.yaml
+++ b/roles/arvados-sso/tasks/main.yaml
@@ -2,20 +2,6 @@
 # Tasks file for the Arvados SSO role #
 #######################################
 
-- name: Link Ruby 2.1.3 to be used system-wide
-  sudo: yes
-  shell: >
-    ln -s -f /usr/local/rvm/rubies/ruby-2.1.3/bin/* /usr/bin
-
-- name: Install rails (this may take a couple of minutes, pease be patient)
-  sudo: yes
-  gem: name=rails state=latest
-
-- name: Link rails to be used system-wide
-  sudo: yes
-  shell: >
-    ln -s -f /usr/local/rvm/gems/ruby-2.1.3/bin/rails /usr/bin/rails
-
 - name: Install Arvados SSO server
   sudo: yes
   yum: name=arvados-sso-server state=latest
@@ -83,11 +69,11 @@
   shell: >
     yum reinstall arvados-sso-server -y
 
-- name: Copy new-client script to /tmp
-  template: src=new_client.j2 dest=/tmp/new_client.rb
+- name: Copy new-client script to /var/www/arvados-sso/current/lib/tasks
+  sudo: yes
+  template: src=new_client.j2 dest=/var/www/arvados-sso/current/lib/tasks/new_client.rb
 
 - name: Create arvados-server client
-  sudo: yes
-  shell: >
-    cd /var/www/arvados-sso/current/ &&
-    rails runner -e production /tmp/new_client.rb
+  command: bundle exec rake lib/tasks/new_client.rb
+  args:
+    chdir: /var/www/arvados-sso/current
