--- a/roles/passenger/tasks/main.yaml
+++ b/roles/passenger/tasks/main.yaml
@@ -7,7 +7,7 @@
 # https://community.hpcloud.com/article/centos-63-instance-giving-cannot-retrieve-metalink-repository-epel-error
 - name: Update EPEL repo to use HTTP rather than HTTPS
   sudo: yes
-  command: sudo sed -i "s/mirrorlist=https/mirrorlist=http/" /etc/yum.repos.d/epel.repo
+  command: sed -i "s/mirrorlist=https/mirrorlist=http/" /etc/yum.repos.d/epel.repo
 
 - name: Save configuration in /etc/yum.repos.d/passenger.repo
   sudo: yes
@@ -23,3 +23,11 @@
     - {name: 'nginx'}
     - {name: 'passenger'}
   when: ansible_distribution == "CentOS"
+
+- name: Uncomment passenger configuration file
+  sudo: yes
+  command: sudo sed -i "s/#passenger/passenger/" /etc/nginx/conf.d/passenger.conf
+
+- name: Restart nginx
+  sudo: yes
+  service: name=nginx state=restarted
