--- a/roles/arvados-sso/tasks/main.yaml
+++ b/roles/arvados-sso/tasks/main.yaml
@@ -77,3 +77,11 @@
   command: bundle exec rake lib/tasks/new_client.rb
   args:
     chdir: /var/www/arvados-sso/current
+
+- name: Modify nginx configuration
+  sudo: yes
+  template: src=nginx.j2 dest=/etc/nginx/nginx.conf
+
+- name: Restart nginx
+  sudo: yes
+  service: name=nginx state=restarted
