--- a/roles/passenger/tasks/main.yaml
+++ b/roles/passenger/tasks/main.yaml
@@ -14,6 +14,31 @@
   copy: src=passenger.repo dest=/etc/yum.repos.d/passenger.repo owner=root group=root
   when: ansible_distribution == "CentOS"
 
+- name: Disable SELinux (only for old kernels)
+  sudo: yes
+  shell: >
+    sed -i "s/SELINUX=permissive/SELINUX=disabled/" /etc/selinux/config &&
+    sed -i "s/SELINUX=enforcing/SELINUX=disabled/" /etc/selinux/config
+  when: DISABLE_SELINUX is defined
+
+- name: Restart machine after disabling SELinux
+  sudo: yes
+  command: shutdown -r now "Ansible updates triggered"
+  async: 0
+  poll: 0
+  ignore_errors: true
+  when: DISABLE_SELINUX is defined
+
+- name: waiting for server to come back
+  local_action: wait_for host={{ inventory_hostname }}
+                state=started
+                port=22
+                delay=30
+                timeout=300
+                connect_timeout=15
+  sudo: false
+  when: DISABLE_SELINUX is defined
+
 - name: Install Nginx and Passenger (and requirements)
   sudo: yes
   yum: name={{ item.name }} state=latest
