--- a/roles/arvados-sso/tasks/main.yaml
+++ b/roles/arvados-sso/tasks/main.yaml
@@ -78,6 +78,14 @@
   args:
     chdir: /var/www/arvados-sso/current
 
+- name: Create directory to store SSL certs
+  sudo: yes
+  file: path="{{ SSL_CERT_PATH }}" state=directory
+
+- name: create self-signed SSL cert
+  sudo: yes
+  command: openssl req -new -nodes -x509 -subj "/C=EU/ST=Sweden/L=Stockholm/O=IT/CN=${ansible_fqdn}" -days 3650 -keyout /etc/nginx/ssl/server.key -out /etc/nginx/ssl/server.crt -extensions v3_ca creates=/etc/nginx/ssl/server.crt
+
 - name: Modify nginx configuration
   sudo: yes
   template: src=nginx.j2 dest=/etc/nginx/nginx.conf
