Setting up arvados-api role, factoring out postgresql role. @guillermo-carrasco #reviewthis

--- a/arvados.yaml
+++ b/arvados.yaml
@@ -1,4 +1,7 @@
 # Main playbook to deploy an Arvados cluster
+- hosts: all
+  name: make sure ansible-galaxy requirements are installed
+  local_action: ansible-galaxy install -r requirements.yml --ignore-errors --force -p roles
 
 - hosts: all
   sudo_user: "root"
@@ -11,3 +14,11 @@
       - { role: rvm_io.rvm1-ruby, tags: ruby, sudo: True }
       - passenger
       - arvados-sso
+
+- hosts: api
+  sudo_user: "root"
+  sudo: yes
+  roles:
+      - rvm_io.rvm1-ruby
+      - arvados
+      - arvados-api
