--- a/roles/arvados-api/tasks/postgresql.yml
+++ b/roles/arvados-api/tasks/postgresql.yml
@@ -1,5 +1,5 @@
 ---
-- name: see if the db got initdb'd
+- name: see if the db got initialized
   stat: path=/var/lib/pgsql/data
   register: db_initialized
 
@@ -13,14 +13,14 @@
 # On CentOS6, you will need to modify PostgreSQL’s configuration to allow password authentication for local users
 - name: Allow password authentication for local users (PostgreSQL)
   shell: >
-    sudo sed -i -e "s/ident/md5/" /var/lib/pgsql/data/pg_hba.conf
+    sudo sed -i -e "s/ident/trust/" /var/lib/pgsql/data/pg_hba.conf
   when: ansible_distribution == "CentOS"
   notify:
     - restart postgresql
 
-- name: Start PostgreSQL
+- name: Restart PostgreSQL
   sudo: yes
-  service: name=postgresql state=started
+  service: name=postgresql state=restarted
 
 - name: ensure database is created
   action: postgresql_db db={{dbname}}
@@ -29,4 +29,4 @@
   action: postgresql_user db={{dbname}} user={{dbuser}} password={{dbpassword}} priv=ALL
 
 - name: ensure user does not have unnecessary privilege
-  action: postgresql_user user={{dbuser}} role_attr_flags=NOSUPERUSER,NOCREATEDB
+  action: postgresql_user user={{dbuser}} role_attr_flags=NOCREATEROLE,NOSUPERUSER,CREATEDB
