Arvados git role using gitolite galaxy module and arvados-git role for Arvados customizations.

--- a/arvados.yaml
+++ b/arvados.yaml
@@ -19,7 +19,7 @@
       - arvados
       - passenger
       - arvados-api
+      - arvados-git
       - groover.gitolite
 #      - arvados-crunch
-#      - arvados-git
 #      - arvados-workbench
