--- a/roles/arvados-api/tasks/main.yml
+++ b/roles/arvados-api/tasks/main.yml
@@ -32,9 +32,4 @@
 - name: Copy API application config
   sudo: yes
   template: src=application.j2 dest=/etc/arvados/api/application.yml
-
-- name: "Create arvados-api user and internal git repos"
-  file: path="{{ item }}" state=directory mode=0700
-  with_items:
-    - "/var/lib/arvados/internal.git"
-    - "/var/lib/arvados/git/repositories"
+  notify: restart nginx
