--- a/roles/arvados-api/defaults/main.yml
+++ b/roles/arvados-api/defaults/main.yml
@@ -3,9 +3,4 @@ dbname: arvados_production
 dbuser: arvados
 dbpassword: Bo9phahb
 rvm1_gpg_key_server: 'hkp://pgp.mit.edu'
-postgresql_default_auth_method: 'md5'
-postgresql_pg_hba_default:
-  - { type: local, database: all, user: '{{ postgresql_admin_user }}', address: '', method: '{{ postgresql_default_auth_method }}', comment: '' }
-  - { type: local, database: all, user: all, address: '',             method: '{{ postgresql_default_auth_method }}', comment: '"local" is for Unix domain socket connections only' }
-  - { type: host,  database: all, user: all, address: '127.0.0.1/32', method: '{{ postgresql_default_auth_method }}', comment: 'IPv4 local connections:' }
-  - { type: host,  database: all, user: all, address: '::1/128',      method: '{{ postgresql_default_auth_method }}', comment: 'IPv6 local connections:' }
+postgresql_default_auth_method: 'trust'
