--- a/roles/arvados-api/handlers/main.yml
+++ b/roles/arvados-api/handlers/main.yml
@@ -1,2 +1,5 @@
 - name: restart postgresql
   service: name=postgresql state=restarted
+
+- name: restart nginx
+  service: name=nginx state=restarted
