--- a/roles/arvados-api/vars/main.yaml
+++ b/roles/arvados-api/vars/main.yaml
@@ -7,3 +7,5 @@ sso_provider_url: https://sso
 workbench_address: https://workbench.zzzzz.example.com
 websocket_address: wss://ws.zzzzz.example.com/websocket
 git_repositories_dir: /var/lib/arvados/git/repositories
+
+SSL_CERT_PATH: /etc/nginx/ssl
