Externalized some vars. Fixing arvados-api

--- a/roles/arvados-api/vars/main.yaml
+++ b/roles/arvados-api/vars/main.yaml
@@ -9,3 +9,4 @@ websocket_address: wss://ws.zzzzz.example.com/websocket
 git_repositories_dir: /var/lib/arvados/git/repositories
 
 SSL_CERT_PATH: /etc/nginx/ssl
+puma_runit: /etc/sv/arvados-puma
