--- a/roles/arvados-api/tasks/main.yml
+++ b/roles/arvados-api/tasks/main.yml
@@ -3,6 +3,7 @@
 #######################################
 
 - name: Install Arvados API server and dependencies
+  sudo: yes
   yum: name={{ item }} state=latest update_cache=yes
   with_items:
     - bison
@@ -16,6 +17,7 @@
     - arvados-api-server
 
 - name: "Create arvados-api app and database config"
+  sudo: yes
   file: path="/etc/arvados/api" state=directory mode=0700
 
 - name: Create directory to store SSL certs
@@ -54,3 +56,11 @@
   sudo: yes
   template: src=application.j2 dest=/etc/arvados/api/application.yml
   notify: restart nginx
+
+- name: Create puma runit service dir
+  sudo: yes
+  file: name="{{ puma_runit }}" state=directory
+
+- name: Setting up runit config for Puma
+  sudo: yes
+  copy: src=puma.sh dest="{{ puma_runit }}/run" mode=700 owner=root group=root
