--- a/roles/arvados-git/tasks/main.yml
+++ b/roles/arvados-git/tasks/main.yml
@@ -8,29 +8,35 @@
   yum: name={{ item }} state=latest update_cache=yes
   with_items:
     - git
-#    - perl-Data-Dumper XXX: not found in yum, should be installed via cpanm?
+    - perl-Data-Dumper-Names
     - openssh-server
     - gitolite3
     - arvados-git-httpd
     - runit
 
 - name: "Create arvados-api user and internal git repos"
+  sudo: yes
   file: path="{{ item }}" state=directory mode=0700
   with_items:
     - "/var/lib/arvados/internal.git"
     - "{{ gitolite_user_home }}/repositories"
 
 - name: Add git user and generate SSH key
+  sudo: yes
   user: name={{ gitolite_user_name }} shell=/bin/bash groups={{ gitolite_user_name }} home="{{ gitolite_user_home }}" generate_ssh_key=yes ssh_key_bits=2048
 
 - name: Create arvados git dir
+  sudo: yes
   file: name="{{ gitolite_user_home }}" state=directory owner="{{ gitolite_user_name }}" group="{{ gitolite_user_name }}"
 
 - name: Create arvados git (bin) dir
+  sudo: yes
   file: name="{{ gitolite_user_home }}/bin" state=directory owner="{{ gitolite_user_name }}" group="{{ gitolite_user_name }}"
 
 - name: Create gitolite runit service dir
+  sudo: yes
   file: name="{{ gitolite_runit }}" state=directory
 
 - name: Setting up runit config for gitolite
+  sudo: yes
   template: src="gitolite.runit.j2" dest="{{ gitolite_runit }}/run" mode=700
