--- a/roles/arvados-git/tasks/main.yml
+++ b/roles/arvados-git/tasks/main.yml
@@ -57,22 +57,27 @@
   become_method: sudo
   copy: src=gitolite.rc dest="{{ git_user_home}}/.gitolite.rc"
 
-- name: Create arvados git (bin) dir
-  become: yes
-  become_user: "{{ git_user_name }}"
-  become_method: sudo
-  file: name="{{ git_user_home }}/bin" state=directory owner="{{ git_user_name }}" group="{{ git_user_name }}"
-
 - name: Configure git synchronization
   sudo: yes
   template: src=arvados-clients.j2 dest=/var/www/arvados-api/current/config/arvados-clients.yml
 
-# XXX: Enable the synchronization script section in the guide
-
-- name: Create gitolite runit service dir
+- name: Enable the synchronization script
   sudo: yes
-  file: name="{{ gitolite_runit }}" state=directory
+  copy: src=arvados-git-sync dest=/etc/cron.d/arvados-git-sync
+
+- name: Create directories for arvados-git-httpd
+  sudo: yes
+  file: name=/etc/sv/arvados-git-httpd/log state=directory
+
+
+- name: Copy log/run file for gitolite
+  sudo: yes
+  copy: src="log_run" dest="{{ gitolite_runit }}/log/run" mode=700
 
 - name: Setting up runit config for gitolite
   sudo: yes
   template: src="gitolite.runit.j2" dest="{{ gitolite_runit }}/run" mode=700
+
+- name: Restart nginx
+  sudo: yes
+  service: name=nginx state=restarted
